--- a/pages/donut.html
+++ b/pages/donut.html
@@ -22,9 +22,9 @@
     <nav>
       <div class="navigation">
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="zion.html">Zion National Park</a></li>
-          <li><a href="cecret.html">Cecret Lake</a></li>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./zion.html">Zion National Park</a></li>
+          <li><a href="./cecret.html">Cecret Lake</a></li>
           <li><a href="#.html">lightgallery</a></li>
           <li id="igithub">
             <a href="https://github.com/kylejvh" target="_blank"
