implemented lightgallery, organized files. initial responsive layout.

--- a/pages/donut.html
+++ b/pages/donut.html
@@ -36,54 +36,112 @@
       </div>
     </nav>
 
+    <div class="gallerytext">
+      <p>This is an interactive gallery built upon the lightgallery library.</p>
+    </div>
     <div id="gallery-container">
-      <a href="../panos/final/zion.jpg">
-        <img
-          class="image-responsive"
-          src="../panos/final/zion.jpg"
-          alt="Image description"
-        />
-      </a>
-
-      <a href="../panos/final/lake.jpg">
-        <img
-          class="image-responsive"
-          src="../panos/final/lake.jpg"
-          alt="Image description"
-        />
-      </a>
-
-      <a href="../panos/final/zion3.jpg">
-        <img
-          class="image-responsive"
-          src="../panos/final/zion3.jpg"
-          alt="Image description"
-        />
-      </a>
-
-      <a href="../panos/final/church.jpg">
-        <img
-          class="image-responsive"
-          src="../panos/final/church.jpg"
-          alt="Image description"
-        />
-      </a>
-
-      <a href="../panos/final/zion2.jpg">
-        <img
-          class="image-responsive"
-          src="../panos/final/zion2.jpg"
-          alt="Image description"
-        />
-      </a>
-
-      <a href="../panos/final/zion4.jpg">
-        <img
-          class="image-responsive"
-          src="../panos/final/zion4.jpg"
-          alt="Image description"
-        />
-      </a>
+      <div class="galleryimg">
+        <a
+          id="zionimg"
+          href="/img/lg/zion/zion.jpg"
+          data-srcset="/img/lg/zion/zion-1250.jpg 1250w,
+        /img/lg/zion/zion-2000.jpg 2000w,
+        /img/lg/zion/zion.jpg"
+          data-sizes="(max-width: 380px) 1250px,
+        (max-width: 800px) 2000x"
+        >
+          <img
+            class="image-responsive"
+            src="/img/lg/zion/thumb.jpg"
+            alt="Image description"
+          />
+        </a>
+      </div>
+      <div class="galleryimg">
+        <a
+          id="lakeimg"
+          href="/img/lg/lake/lake.jpg"
+          data-srcset="/img/lg/lake/lake-1250.jpg 1250w,
+      /img/lg/lake/lake-2000.jpg 2000w,
+      /img/lg/lake/lake.jpg"
+          data-sizes="(max-width: 380px) 1250px,
+      (max-width: 800px) 2000x"
+        >
+          <img
+            class="image-responsive"
+            src="/img/lg/lake/thumb.jpg"
+            alt="Image description"
+          />
+        </a>
+      </div>
+      <div class="galleryimg">
+        <a
+          id="zion3img"
+          href="/img/lg/zion3/zion3.jpg"
+          data-srcset="/img/lg/zion3/zion3-1250.jpg 1250w,
+      /img/lg/zion3/zion3-2000.jpg 2000w,
+      /img/lg/zion3/zion3.jpg"
+          data-sizes="(max-width: 380px) 1250px,
+      (max-width: 800px) 2000x"
+        >
+          <img
+            class="image-responsive"
+            src="/img/lg/zion3/thumb.jpg"
+            alt="Image description"
+          />
+        </a>
+      </div>
+      <div class="galleryimg">
+        <a
+          id="churchimg"
+          href="/img/lg/church/church.jpg"
+          data-srcset="/img/lg/church/church-1250.jpg 1250w,
+      /img/lg/church/church-2000.jpg 2000w,
+      /img/lg/church/church.jpg"
+          data-sizes="(max-width: 380px) 1250px,
+      (max-width: 800px) 2000x"
+        >
+          <img
+            class="image-responsive"
+            src="/img/lg/church/thumb.jpg"
+            alt="Image description"
+          />
+        </a>
+      </div>
+      <div class="galleryimg">
+        <a
+          id="zion2img"
+          href="/img/lg/zion2/zion2.jpg"
+          data-srcset="/img/lg/zion2/zion2-1250.jpg 1250w,
+      /img/lg/zion2/zion2-2000.jpg 2000w,
+      /img/lg/zion2/zion2.jpg"
+          data-sizes="(max-width: 380px) 1250px,
+      (max-width: 800px) 2000x"
+        >
+          <img
+            class="image-responsive"
+            src="/img/lg/zion2/thumb.jpg"
+            alt="Image description"
+          />
+        </a>
+      </div>
+      <div class="galleryimg">
+        <a
+          id="zion4img"
+          href="/img/lg/zion4/zion4.jpg"
+          data-srcset="/img/lg/zion4/zion4-1250.jpg 1250w,
+      /img/lg/zion4/zion4-2000.jpg 2000w,
+      /img/lg/zion4/zion4.jpg"
+          data-sizes="(max-width: 380px) 1250px,
+      (max-width: 800px) 2000x"
+        >
+          <img
+            class="image-responsive"
+            src="/img/lg/zion4/thumb.jpg"
+            alt="Image description"
+          />
+        </a>
+      </div>
     </div>
   </body>
 </html>
