Added image srcsets, vanillatilt init on homepage, picturefil init, misc clean-up

--- a/pages/zion.html
+++ b/pages/zion.html
@@ -6,6 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" type="text/css" href="../styles/style.css" />
     <link rel="stylesheet" type="text/css" href="../styles/lightgallery.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="../styles/lg-transitions.css"
+    />
+    <script
+      defer
+      type="text/javascript"
+      src="/scripts/picturefill.min.js"
+    ></script>
+    <script
+      defer
+      type="text/javascript"
+      src="/scripts/vanilla-tilt.min.js"
+    ></script>
     <script defer src="../scripts/script.js"></script>
 
     <!-- lightgallery scripts/plugins  -->
@@ -43,19 +58,118 @@
     </div>
 
     <div class="zionphotos" id="photogroup1">
-      <img class="grid1" src="../photos/zion2.jpg" alt="Zion" />
-      <img class="grid2" src="../photos/zion1.jpg" alt="Zion" />
-      <img class="grid3" src="../photos/zionright.jpg" alt="Zion" />
-      <img class="grid4" src="../photos/zion8.jpg" alt="Zion" />
-      <img class="grid5" src="../photos/zion9.jpg" alt="Zion" />
+      <img
+        class="grid1"
+        srcset="
+          /img/znppg/z1-1250.jpg 1250w,
+          /img/znppg/z1-2000.jpg 2000w,
+          /img/znppg/z1.jpg
+        "
+        sizes="(max-width: 800px) 1250px, (max-width: 2560px) 2000px"
+        alt="Zion"
+      />
+      <img
+        class="grid2"
+        srcset="
+          /img/znppg/z2-1250.jpg 1250w,
+          /img/znppg/z2-2000.jpg 2000w,
+          /img/znppg/z2.jpg
+        "
+        sizes="(max-width:
+  800px) 1250px, (max-width: 2560px) 2000px"
+        alt="Zion"
+      />
+      <img
+        class="grid3"
+        srcset="
+          /img/znppg/z3-1250.jpg 1250w,
+          /img/znppg/z3-2000.jpg 2000w,
+          /img/znppg/z3.jpg
+        "
+        sizes="(max-width:
+  800px) 1250px, (max-width: 2560px) 2000px"
+        alt="Zion"
+      />
+      <img
+        class="grid4"
+        srcset="
+          /img/znppg/z4-1250.jpg 1250w,
+          /img/znppg/z4-2000.jpg 2000w,
+          /img/znppg/z4.jpg
+        "
+        sizes="(max-width:
+  800px) 1250px, (max-width: 2560px) 2000px"
+        alt="Zion"
+      />
+      <img
+        class="grid5"
+        srcset="
+          /img/znppg/z5-1250.jpg 1250w,
+          /img/znppg/z5-2000.jpg 2000w,
+          /img/znppg/z5.jpg
+        "
+        sizes="(max-width:
+  800px) 1250px, (max-width: 2560px) 2000px"
+        alt="Zion"
+      />
     </div>
 
     <div class="zionphotos" id="photogroup2">
-      <img class="gridalt1" src="../photos/zion12.jpg" alt="Zion" />
-      <img class="gridalt2" src="../photos/zion3.jpg" alt="Zion" />
-      <img class="gridalt3" src="../photos/zion2.jpg" alt="Zion" />
-      <img class="gridalt4" src="../photos/zion3.jpg" alt="Zion" />
-      <img class="gridalt5" src="../photos/bottomright.jpg" alt="Zion" />
+      <img
+        class="gridalt1"
+        srcset="
+          /img/znppg/z6-1250.jpg 1250w,
+          /img/znppg/z6-2000.jpg 2000w,
+          /img/znppg/z6.jpg
+        "
+        sizes="(max-width:
+  800px) 1250px, (max-width: 2560px) 2000px"
+        alt="Zion"
+      />
+      <img
+        class="gridalt2"
+        srcset="
+          /img/znppg/z7-1250.jpg 1250w,
+          /img/znppg/z7-2000.jpg 2000w,
+          /img/znppg/z7.jpg
+        "
+        sizes="(max-width:
+  800px) 1250px, (max-width: 2560px) 2000px"
+        alt="Zion"
+      />
+      <img
+        class="gridalt3"
+        srcset="
+          /img/znppg/z8-1250.jpg 1250w,
+          /img/znppg/z8-2000.jpg 2000w,
+          /img/znppg/z8.jpg
+        "
+        sizes="(max-width:
+  800px) 1250px, (max-width: 2560px) 2000px"
+        alt="Zion"
+      />
+      <img
+        class="gridalt4"
+        srcset="
+          /img/znppg/z9-1250.jpg 1250w,
+          /img/znppg/z9-2000.jpg 2000w,
+          /img/znppg/z9.jpg
+        "
+        sizes="(max-width:
+  800px) 1250px, (max-width: 2560px) 2000px"
+        alt="Zion"
+      />
+      <img
+        class="gridalt5"
+        srcset="
+          /img/znppg/z10-1250.jpg 1250w,
+          /img/znppg/z10-2000.jpg 2000w,
+          /img/znppg/z10.jpg
+        "
+        sizes="(max-width:
+  800px) 1250px, (max-width: 2560px) 2000px"
+        alt="Zion"
+      />
     </div>
   </body>
 </html>
