--- a/pages/cecret.html
+++ b/pages/cecret.html
@@ -6,6 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" type="text/css" href="../styles/style.css" />
     <link rel="stylesheet" type="text/css" href="../styles/lightgallery.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="../styles/lg-transitions.css"
+    />
+    <script
+      defer
+      type="text/javascript"
+      src="/scripts/picturefill.min.js"
+    ></script>
+    <script
+      defer
+      type="text/javascript"
+      src="/scripts/vanilla-tilt.min.js"
+    ></script>
     <script defer src="../scripts/script.js"></script>
 
     <!-- lightgallery scripts/plugins  -->
