--- a/pages/index.html
+++ b/pages/index.html
@@ -6,6 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" type="text/css" href="../styles/style.css" />
     <link rel="stylesheet" type="text/css" href="../styles/lightgallery.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="../styles/lg-transitions.css"
+    />
+    <script
+      defer
+      type="text/javascript"
+      src="/scripts/picturefill.min.js"
+    ></script>
+    <script
+      defer
+      type="text/javascript"
+      src="/scripts/vanilla-tilt.min.js"
+    ></script>
     <script defer src="../scripts/script.js"></script>
 
     <!-- lightgallery scripts/plugins  -->
@@ -23,7 +38,7 @@
       <div class="navigation">
         <ul>
           <li><a href="#">Home</a></li>
-          <li><a href="./zion.html">Zion National Park</a></li>
+          <li><a href="/pages/zion.html">Zion National Park</a></li>
           <li><a href="./cecret.html">Cecret Lake</a></li>
           <li><a href="./donut.html">Donut Falls</a></li>
           <li id="igithub">
@@ -37,6 +52,7 @@
     </nav>
 
     <div class="background">
+      >
       <div class="backgroundtext">
         <h1 class="introtext">Welcome to my travel website!</h1>
         <p class="introtext">
