--- a/cecret.html
+++ b/cecret.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" type="text/css" href="../styles/style.css" />
+    <link rel="stylesheet" type="text/css" href="/styles/style.css" />
     <link rel="stylesheet" type="text/css" href="../styles/lightgallery.css" />
     <link
       rel="stylesheet"
@@ -37,10 +37,10 @@
     <nav>
       <div class="navigation">
         <ul>
-          <li><a href="./index.html">Home</a></li>
-          <li><a href="./zion.html">Zion National Park</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="zion.html">Zion National Park</a></li>
           <li><a href="#">Cecret Lake</a></li>
-          <li><a href="./donut.html">Donut Falls</a></li>
+          <li><a href="donut.html">Donut Falls</a></li>
           <li id="igithub">
             <a href="https://github.com/kylejvh" target="_blank"
               ><i class="fab fa-github-square"></i
