--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
       <div class="navigation">
         <ul>
           <li><a href="#">Home</a></li>
-          <li><a href="/pages/zion.html">Zion National Park</a></li>
-          <li><a href="./cecret.html">Cecret Lake</a></li>
-          <li><a href="./donut.html">Donut Falls</a></li>
+          <li><a href="zion.html">Zion National Park</a></li>
+          <li><a href="cecret.html">Cecret Lake</a></li>
+          <li><a href="donut.html">Donut Falls</a></li>
           <li id="igithub">
             <a href="https://github.com/kylejvh" target="_blank"
               ><i class="fab fa-github-square"></i
