--- a/zion.html
+++ b/zion.html
@@ -37,10 +37,10 @@
     <nav>
       <div class="navigation">
         <ul>
-          <li><a href="./index.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="#">Zion National Park</a></li>
-          <li><a href="./cecret.html">Cecret Lake</a></li>
-          <li><a href="./donut.html">Donut Falls</a></li>
+          <li><a href="cecret.html">Cecret Lake</a></li>
+          <li><a href="donut.html">Donut Falls</a></li>
           <li id="igithub">
             <a href="https://github.com/kylejvh" target="_blank"
               ><i class="fab fa-github-square"></i
