Dir/src links fixed

--- a/donut.html
+++ b/donut.html
@@ -4,30 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" type="text/css" href="../styles/style.css" />
-    <link rel="stylesheet" type="text/css" href="../styles/lightgallery.css" />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="../styles/lg-transitions.css"
-    />
+    <link rel="stylesheet" type="text/css" href="styles/style.css" />
+    <link rel="stylesheet" type="text/css" href="styles/lightgallery.css" />
+    <link rel="stylesheet" type="text/css" href="styles/lg-transitions.css" />
     <script
       defer
       type="text/javascript"
-      src="/scripts/picturefill.min.js"
+      src="scripts/picturefill.min.js"
     ></script>
     <script
       defer
       type="text/javascript"
-      src="/scripts/vanilla-tilt.min.js"
+      src="scripts/vanilla-tilt.min.js"
     ></script>
-    <script defer src="../scripts/script.js"></script>
+    <script defer src="scripts/script.js"></script>
 
     <!-- lightgallery scripts/plugins  -->
-    <script src="../scripts/lightgallery.min.js"></script>
-    <script src="../scripts/lg-thumbnail.min.js"></script>
-    <script src="../scripts/lg-fullscreen.min.js"></script>
-    <script src="../scripts/lg-zoom.min.js"></script>
+    <script src="scripts/lightgallery.min.js"></script>
+    <script src="scripts/lg-thumbnail.min.js"></script>
+    <script src="scripts/lg-fullscreen.min.js"></script>
+    <script src="scripts/lg-zoom.min.js"></script>
 
     <script src="https://kit.fontawesome.com/6368e05507.js"></script>
 
@@ -58,16 +54,16 @@
       <div class="galleryimg">
         <a
           id="zionimg"
-          href="/img/lg/zion/zion.jpg"
-          data-srcset="/img/lg/zion/zion-1250.jpg 1250w,
-        /img/lg/zion/zion-2000.jpg 2000w,
-        /img/lg/zion/zion.jpg"
+          href="img/lg/zion/zion.jpg"
+          data-srcset="img/lg/zion/zion-1250.jpg 1250w,
+        img/lg/zion/zion-2000.jpg 2000w,
+        img/lg/zion/zion.jpg"
           data-sizes="(max-width: 380px) 1250px,
         (max-width: 800px) 2000x"
         >
           <img
             class="image-responsive"
-            src="/img/lg/zion/thumb.jpg"
+            src="img/lg/zion/thumb.jpg"
             alt="Image description"
           />
         </a>
@@ -75,16 +71,16 @@
       <div class="galleryimg">
         <a
           id="lakeimg"
-          href="/img/lg/lake/lake.jpg"
-          data-srcset="/img/lg/lake/lake-1250.jpg 1250w,
-      /img/lg/lake/lake-2000.jpg 2000w,
-      /img/lg/lake/lake.jpg"
+          href="img/lg/lake/lake.jpg"
+          data-srcset="img/lg/lake/lake-1250.jpg 1250w,
+      img/lg/lake/lake-2000.jpg 2000w,
+      img/lg/lake/lake.jpg"
           data-sizes="(max-width: 380px) 1250px,
       (max-width: 800px) 2000x"
         >
           <img
             class="image-responsive"
-            src="/img/lg/lake/thumb.jpg"
+            src="img/lg/lake/thumb.jpg"
             alt="Image description"
           />
         </a>
@@ -92,16 +88,16 @@
       <div class="galleryimg">
         <a
           id="zion3img"
-          href="/img/lg/zion3/zion3.jpg"
-          data-srcset="/img/lg/zion3/zion3-1250.jpg 1250w,
-      /img/lg/zion3/zion3-2000.jpg 2000w,
-      /img/lg/zion3/zion3.jpg"
+          href="img/lg/zion3/zion3.jpg"
+          data-srcset="img/lg/zion3/zion3-1250.jpg 1250w,
+      img/lg/zion3/zion3-2000.jpg 2000w,
+      img/lg/zion3/zion3.jpg"
           data-sizes="(max-width: 380px) 1250px,
       (max-width: 800px) 2000x"
         >
           <img
             class="image-responsive"
-            src="/img/lg/zion3/thumb.jpg"
+            src="img/lg/zion3/thumb.jpg"
             alt="Image description"
           />
         </a>
@@ -109,16 +105,16 @@
       <div class="galleryimg">
         <a
           id="churchimg"
-          href="/img/lg/church/church.jpg"
-          data-srcset="/img/lg/church/church-1250.jpg 1250w,
-      /img/lg/church/church-2000.jpg 2000w,
-      /img/lg/church/church.jpg"
+          href="img/lg/church/church.jpg"
+          data-srcset="img/lg/church/church-1250.jpg 1250w,
+      img/lg/church/church-2000.jpg 2000w,
+      img/lg/church/church.jpg"
           data-sizes="(max-width: 380px) 1250px,
       (max-width: 800px) 2000x"
         >
           <img
             class="image-responsive"
-            src="/img/lg/church/thumb.jpg"
+            src="img/lg/church/thumb.jpg"
             alt="Image description"
           />
         </a>
@@ -126,16 +122,16 @@
       <div class="galleryimg">
         <a
           id="zion2img"
-          href="/img/lg/zion2/zion2.jpg"
-          data-srcset="/img/lg/zion2/zion2-1250.jpg 1250w,
-      /img/lg/zion2/zion2-2000.jpg 2000w,
-      /img/lg/zion2/zion2.jpg"
+          href="img/lg/zion2/zion2.jpg"
+          data-srcset="img/lg/zion2/zion2-1250.jpg 1250w,
+      img/lg/zion2/zion2-2000.jpg 2000w,
+      img/lg/zion2/zion2.jpg"
           data-sizes="(max-width: 380px) 1250px,
       (max-width: 800px) 2000x"
         >
           <img
             class="image-responsive"
-            src="/img/lg/zion2/thumb.jpg"
+            src="img/lg/zion2/thumb.jpg"
             alt="Image description"
           />
         </a>
@@ -143,16 +139,16 @@
       <div class="galleryimg">
         <a
           id="zion4img"
-          href="/img/lg/zion4/zion4.jpg"
-          data-srcset="/img/lg/zion4/zion4-1250.jpg 1250w,
-      /img/lg/zion4/zion4-2000.jpg 2000w,
-      /img/lg/zion4/zion4.jpg"
+          href="img/lg/zion4/zion4.jpg"
+          data-srcset="img/lg/zion4/zion4-1250.jpg 1250w,
+      img/lg/zion4/zion4-2000.jpg 2000w,
+      img/lg/zion4/zion4.jpg"
           data-sizes="(max-width: 380px) 1250px,
       (max-width: 800px) 2000x"
         >
           <img
             class="image-responsive"
-            src="/img/lg/zion4/thumb.jpg"
+            src="img/lg/zion4/thumb.jpg"
             alt="Image description"
           />
         </a>
