--- a/cecret.html
+++ b/cecret.html
@@ -4,30 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" type="text/css" href="/styles/style.css" />
-    <link rel="stylesheet" type="text/css" href="../styles/lightgallery.css" />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="../styles/lg-transitions.css"
-    />
+    <link rel="stylesheet" type="text/css" href="styles/style.css" />
+    <link rel="stylesheet" type="text/css" href="styles/lightgallery.css" />
+    <link rel="stylesheet" type="text/css" href="styles/lg-transitions.css" />
     <script
       defer
       type="text/javascript"
-      src="/scripts/picturefill.min.js"
+      src="scripts/picturefill.min.js"
     ></script>
     <script
       defer
       type="text/javascript"
-      src="/scripts/vanilla-tilt.min.js"
+      src="scripts/vanilla-tilt.min.js"
     ></script>
-    <script defer src="../scripts/script.js"></script>
+    <script defer src="scripts/script.js"></script>
 
     <!-- lightgallery scripts/plugins  -->
-    <script src="../scripts/lightgallery.min.js"></script>
-    <script src="../scripts/lg-thumbnail.min.js"></script>
-    <script src="../scripts/lg-fullscreen.min.js"></script>
-    <script src="../scripts/lg-zoom.min.js"></script>
+    <script src="scripts/lightgallery.min.js"></script>
+    <script src="scripts/lg-thumbnail.min.js"></script>
+    <script src="scripts/lg-fullscreen.min.js"></script>
+    <script src="scripts/lg-zoom.min.js"></script>
 
     <script src="https://kit.fontawesome.com/6368e05507.js"></script>
 
