--- a/zion.html
+++ b/zion.html
@@ -4,30 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" type="text/css" href="../styles/style.css" />
-    <link rel="stylesheet" type="text/css" href="../styles/lightgallery.css" />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="../styles/lg-transitions.css"
-    />
+    <link rel="stylesheet" type="text/css" href="styles/style.css" />
+    <link rel="stylesheet" type="text/css" href="styles/lightgallery.css" />
+    <link rel="stylesheet" type="text/css" href="styles/lg-transitions.css" />
     <script
       defer
       type="text/javascript"
-      src="/scripts/picturefill.min.js"
+      src="scripts/picturefill.min.js"
     ></script>
     <script
       defer
       type="text/javascript"
-      src="/scripts/vanilla-tilt.min.js"
+      src="scripts/vanilla-tilt.min.js"
     ></script>
-    <script defer src="../scripts/script.js"></script>
+    <script defer src="scripts/script.js"></script>
 
     <!-- lightgallery scripts/plugins  -->
-    <script src="../scripts/lightgallery.min.js"></script>
-    <script src="../scripts/lg-thumbnail.min.js"></script>
-    <script src="../scripts/lg-fullscreen.min.js"></script>
-    <script src="../scripts/lg-zoom.min.js"></script>
+    <script src="scripts/lightgallery.min.js"></script>
+    <script src="scripts/lg-thumbnail.min.js"></script>
+    <script src="scripts/lg-fullscreen.min.js"></script>
+    <script src="scripts/lg-zoom.min.js"></script>
 
     <script src="https://kit.fontawesome.com/6368e05507.js"></script>
 
@@ -61,9 +57,9 @@
       <img
         class="grid1"
         srcset="
-          /img/znppg/z1-1250.jpg 1250w,
-          /img/znppg/z1-2000.jpg 2000w,
-          /img/znppg/z1.jpg
+          img/znppg/z1-1250.jpg 1250w,
+          img/znppg/z1-2000.jpg 2000w,
+          img/znppg/z1.jpg
         "
         sizes="(max-width: 800px) 1250px, (max-width: 2560px) 2000px"
         alt="Zion"
@@ -71,9 +67,9 @@
       <img
         class="grid2"
         srcset="
-          /img/znppg/z2-1250.jpg 1250w,
-          /img/znppg/z2-2000.jpg 2000w,
-          /img/znppg/z2.jpg
+          img/znppg/z2-1250.jpg 1250w,
+          img/znppg/z2-2000.jpg 2000w,
+          img/znppg/z2.jpg
         "
         sizes="(max-width:
   800px) 1250px, (max-width: 2560px) 2000px"
@@ -82,9 +78,9 @@
       <img
         class="grid3"
         srcset="
-          /img/znppg/z3-1250.jpg 1250w,
-          /img/znppg/z3-2000.jpg 2000w,
-          /img/znppg/z3.jpg
+          img/znppg/z3-1250.jpg 1250w,
+          img/znppg/z3-2000.jpg 2000w,
+          img/znppg/z3.jpg
         "
         sizes="(max-width:
   800px) 1250px, (max-width: 2560px) 2000px"
@@ -93,9 +89,9 @@
       <img
         class="grid4"
         srcset="
-          /img/znppg/z4-1250.jpg 1250w,
-          /img/znppg/z4-2000.jpg 2000w,
-          /img/znppg/z4.jpg
+          img/znppg/z4-1250.jpg 1250w,
+          img/znppg/z4-2000.jpg 2000w,
+          img/znppg/z4.jpg
         "
         sizes="(max-width:
   800px) 1250px, (max-width: 2560px) 2000px"
@@ -104,9 +100,9 @@
       <img
         class="grid5"
         srcset="
-          /img/znppg/z5-1250.jpg 1250w,
-          /img/znppg/z5-2000.jpg 2000w,
-          /img/znppg/z5.jpg
+          img/znppg/z5-1250.jpg 1250w,
+          img/znppg/z5-2000.jpg 2000w,
+          img/znppg/z5.jpg
         "
         sizes="(max-width:
   800px) 1250px, (max-width: 2560px) 2000px"
@@ -118,9 +114,9 @@
       <img
         class="gridalt1"
         srcset="
-          /img/znppg/z6-1250.jpg 1250w,
-          /img/znppg/z6-2000.jpg 2000w,
-          /img/znppg/z6.jpg
+          img/znppg/z6-1250.jpg 1250w,
+          img/znppg/z6-2000.jpg 2000w,
+          img/znppg/z6.jpg
         "
         sizes="(max-width:
   800px) 1250px, (max-width: 2560px) 2000px"
@@ -129,9 +125,9 @@
       <img
         class="gridalt2"
         srcset="
-          /img/znppg/z7-1250.jpg 1250w,
-          /img/znppg/z7-2000.jpg 2000w,
-          /img/znppg/z7.jpg
+          img/znppg/z7-1250.jpg 1250w,
+          img/znppg/z7-2000.jpg 2000w,
+          img/znppg/z7.jpg
         "
         sizes="(max-width:
   800px) 1250px, (max-width: 2560px) 2000px"
@@ -140,9 +136,9 @@
       <img
         class="gridalt3"
         srcset="
-          /img/znppg/z8-1250.jpg 1250w,
-          /img/znppg/z8-2000.jpg 2000w,
-          /img/znppg/z8.jpg
+          img/znppg/z8-1250.jpg 1250w,
+          img/znppg/z8-2000.jpg 2000w,
+          img/znppg/z8.jpg
         "
         sizes="(max-width:
   800px) 1250px, (max-width: 2560px) 2000px"
@@ -151,9 +147,9 @@
       <img
         class="gridalt4"
         srcset="
-          /img/znppg/z9-1250.jpg 1250w,
-          /img/znppg/z9-2000.jpg 2000w,
-          /img/znppg/z9.jpg
+          img/znppg/z9-1250.jpg 1250w,
+          img/znppg/z9-2000.jpg 2000w,
+          img/znppg/z9.jpg
         "
         sizes="(max-width:
   800px) 1250px, (max-width: 2560px) 2000px"
@@ -162,9 +158,9 @@
       <img
         class="gridalt5"
         srcset="
-          /img/znppg/z10-1250.jpg 1250w,
-          /img/znppg/z10-2000.jpg 2000w,
-          /img/znppg/z10.jpg
+          img/znppg/z10-1250.jpg 1250w,
+          img/znppg/z10-2000.jpg 2000w,
+          img/znppg/z10.jpg
         "
         sizes="(max-width:
   800px) 1250px, (max-width: 2560px) 2000px"
