Tweaked responsive navbar, fixed flexgal srcsets, cleaned up folder structure and code

--- a/cecret.html
+++ b/cecret.html
@@ -35,8 +35,8 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="zion.html">Zion National Park</a></li>
-          <li><a href="#">Cecret Lake</a></li>
-          <li><a href="donut.html">Donut Falls</a></li>
+          <li><a href="#" class="active">Cecret Lake</a></li>
+          <li><a href="lightgallery.html">lightgallery</a></li>
           <li id="igithub">
             <a href="https://github.com/kylejvh" target="_blank"
               ><i class="fab fa-github-square"></i
