--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
       type="text/javascript"
       src="scripts/vanilla-tilt.min.js"
     ></script>
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"
+    ></script>
+
     <script defer src="scripts/script.js"></script>
 
     <!-- lightgallery scripts/plugins  -->
@@ -27,28 +32,27 @@
 
     <script src="https://kit.fontawesome.com/6368e05507.js"></script>
 
-    <title>Utah Travel 2019</title>
+    <title>Utah Trip 2019</title>
   </head>
-  <body class="homepage">
-    <nav>
-      <div class="navigation">
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="zion.html">Zion National Park</a></li>
-          <li><a href="cecret.html">Cecret Lake</a></li>
-          <li><a href="donut.html">Donut Falls</a></li>
-          <li id="igithub">
-            <a href="https://github.com/kylejvh" target="_blank"
-              ><i class="fab fa-github-square"></i
-            ></a>
-          </li>
-          <li id="mobilemenu"><i class="fas fa-bars"></i></li>
-        </ul>
-      </div>
-    </nav>
 
+  <nav>
+    <div class="navigation">
+      <ul>
+        <li><a class="active" href="#">Home</a></li>
+        <li><a href="zion.html">Zion National Park</a></li>
+        <li><a href="cecret.html">Cecret Lake</a></li>
+        <li><a href="lightgallery.html">lightgallery</a></li>
+        <li id="igithub">
+          <a href="https://github.com/kylejvh" target="_blank"
+            ><i class="fab fa-github-square"></i
+          ></a>
+        </li>
+        <li id="mobilemenu"><i class="fas fa-bars"></i></li>
+      </ul>
+    </div>
+  </nav>
+  <body class="homepage">
     <div class="background">
-      >
       <div class="backgroundtext">
         <h1 class="introtext">Welcome to my travel website!</h1>
         <p class="introtext">
