--- a/lightgallery.html
+++ b/lightgallery.html
@@ -36,7 +36,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="zion.html">Zion National Park</a></li>
           <li><a href="cecret.html">Cecret Lake</a></li>
-          <li><a href="#">lightgallery</a></li>
+          <li><a href="#" class="active">lightgallery</a></li>
           <li id="igithub">
             <a href="https://github.com/kylejvh" target="_blank"
               ><i class="fab fa-github-square"></i
@@ -58,8 +58,8 @@
           data-srcset="img/lg/zion/zion-1250.jpg 1250w,
         img/lg/zion/zion-2000.jpg 2000w,
         img/lg/zion/zion.jpg"
-          data-sizes="(max-width: 380px) 1250px,
-        (max-width: 800px) 2000x"
+          data-sizes="(max-width: 420px) 1250px,
+        (max-width: 800px) 2000px"
         >
           <img
             class="image-responsive"
@@ -76,7 +76,7 @@
       img/lg/lake/lake-2000.jpg 2000w,
       img/lg/lake/lake.jpg"
           data-sizes="(max-width: 380px) 1250px,
-      (max-width: 800px) 2000x"
+      (max-width: 800px) 2000px"
         >
           <img
             class="image-responsive"
@@ -93,7 +93,7 @@
       img/lg/zion3/zion3-2000.jpg 2000w,
       img/lg/zion3/zion3.jpg"
           data-sizes="(max-width: 380px) 1250px,
-      (max-width: 800px) 2000x"
+      (max-width: 800px) 2000px"
         >
           <img
             class="image-responsive"
@@ -110,7 +110,7 @@
       img/lg/church/church-2000.jpg 2000w,
       img/lg/church/church.jpg"
           data-sizes="(max-width: 380px) 1250px,
-      (max-width: 800px) 2000x"
+      (max-width: 800px) 2000px"
         >
           <img
             class="image-responsive"
@@ -127,7 +127,7 @@
       img/lg/zion2/zion2-2000.jpg 2000w,
       img/lg/zion2/zion2.jpg"
           data-sizes="(max-width: 380px) 1250px,
-      (max-width: 800px) 2000x"
+      (max-width: 800px) 2000px"
         >
           <img
             class="image-responsive"
@@ -144,7 +144,7 @@
       img/lg/zion4/zion4-2000.jpg 2000w,
       img/lg/zion4/zion4.jpg"
           data-sizes="(max-width: 380px) 1250px,
-      (max-width: 800px) 2000x"
+      (max-width: 800px) 2000px"
         >
           <img
             class="image-responsive"
