--- a/zion.html
+++ b/zion.html
@@ -34,9 +34,9 @@
       <div class="navigation">
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="#">Zion National Park</a></li>
+          <li><a href="#" class="active">Zion National Park</a></li>
           <li><a href="cecret.html">Cecret Lake</a></li>
-          <li><a href="donut.html">Donut Falls</a></li>
+          <li><a href="lightgallery.html">lightgallery</a></li>
           <li id="igithub">
             <a href="https://github.com/kylejvh" target="_blank"
               ><i class="fab fa-github-square"></i
