--- a/cecret.html
+++ b/cecret.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" type="text/css" href="styles/style.css" />
+    <link rel="stylesheet" type="text/css" href="styles/cecret.css" />
     <link rel="stylesheet" type="text/css" href="styles/lightgallery.css" />
     <link rel="stylesheet" type="text/css" href="styles/lg-transitions.css" />
+    <script src="https://kit.fontawesome.com/6368e05507.js"></script>
     <script
       defer
       type="text/javascript"
@@ -25,26 +27,20 @@
     <script src="scripts/lg-fullscreen.min.js"></script>
     <script src="scripts/lg-zoom.min.js"></script>
 
-    <script src="https://kit.fontawesome.com/6368e05507.js"></script>
-
-    <title>Document</title>
+    <title>Cecret Lake</title>
   </head>
   <body class="lakebody">
-    <nav>
-      <div class="navigation">
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="zion.html">Zion National Park</a></li>
-          <li><a href="#" class="active">Cecret Lake</a></li>
-          <li><a href="lightgallery.html">lightgallery</a></li>
-          <li id="igithub">
-            <a href="https://github.com/kylejvh" target="_blank"
-              ><i class="fab fa-github-square"></i
-            ></a>
-          </li>
-          <li id="mobilemenu"><i class="fas fa-bars"></i></li>
-        </ul>
-      </div>
+    <nav class="hero__nav">
+      <a href="index.html">Home</a>
+      <a href="zion.html">Zion National Park</a>
+      <a href="#" class="hero__nav--current">Cecret Lake</a>
+      <a href="misc.html">Misc Gallery</a>
+
+      <a href="https://github.com/kylejvh" target="_blank"
+        ><i class="fab fa-github-square"></i
+      ></a>
+
+      <li id="mobilemenu"><i class="fas fa-bars"></i></li>
     </nav>
 
     <div class="panels">
