--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+
     <link rel="stylesheet" type="text/css" href="styles/style.css" />
+    <link rel="stylesheet" type="text/css" href="styles/index.css" />
+
     <link rel="stylesheet" type="text/css" href="styles/lightgallery.css" />
     <link rel="stylesheet" type="text/css" href="styles/lg-transitions.css" />
+    <script src="https://kit.fontawesome.com/6368e05507.js"></script>
     <script
       defer
       type="text/javascript"
@@ -30,35 +34,35 @@
     <script src="scripts/lg-fullscreen.min.js"></script>
     <script src="scripts/lg-zoom.min.js"></script>
 
-    <script src="https://kit.fontawesome.com/6368e05507.js"></script>
-
     <title>Utah Trip 2019</title>
   </head>
 
-  <nav>
-    <div class="navigation">
-      <ul>
-        <li><a class="active" href="#">Home</a></li>
-        <li><a href="zion.html">Zion National Park</a></li>
-        <li><a href="cecret.html">Cecret Lake</a></li>
-        <li><a href="lightgallery.html">lightgallery</a></li>
-        <li id="igithub">
-          <a href="https://github.com/kylejvh" target="_blank"
-            ><i class="fab fa-github-square"></i
-          ></a>
-        </li>
-        <li id="mobilemenu"><i class="fas fa-bars"></i></li>
-      </ul>
-    </div>
-  </nav>
-  <body class="homepage">
+  <body>
     <div class="background">
-      <div class="backgroundtext">
-        <h1 class="introtext">Welcome to my travel website!</h1>
+      <nav class="hero__nav">
+        <a href="#" class="hero__nav--current">Home</a>
+        <a href="zion.html">Zion National Park</a>
+        <a href="cecret.html">Cecret Lake</a>
+        <a href="misc.html">Misc Gallery</a>
+
+        <a href="https://github.com/kylejvh" target="_blank"
+          ><i class="fab fa-github-square"></i
+        ></a>
+
+        <li id="mobilemenu"><i class="fas fa-bars"></i></li>
+      </nav>
+
+      <!-- <div class="background"> -->
+      <div class="background__container">
+        <h1 class="background__title">
+          Utah Trip 2019
+        </h1>
+
         <p class="introtext">
           This is a site dedicated to my trip to Utah in August 2019!
         </p>
       </div>
+      <!-- </div> -->
     </div>
   </body>
 </html>
