--- a/zion.html
+++ b/zion.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+
     <link rel="stylesheet" type="text/css" href="styles/style.css" />
+    <link rel="stylesheet" type="text/css" href="styles/zion.css" />
     <link rel="stylesheet" type="text/css" href="styles/lightgallery.css" />
     <link rel="stylesheet" type="text/css" href="styles/lg-transitions.css" />
+    <script src="https://kit.fontawesome.com/6368e05507.js"></script>
     <script
       defer
       type="text/javascript"
@@ -17,155 +20,183 @@
       type="text/javascript"
       src="scripts/vanilla-tilt.min.js"
     ></script>
-    <script defer src="scripts/script.js"></script>
+    <script defer src="scripts/zion.js"></script>
 
     <!-- lightgallery scripts/plugins  -->
     <script src="scripts/lightgallery.min.js"></script>
     <script src="scripts/lg-thumbnail.min.js"></script>
     <script src="scripts/lg-fullscreen.min.js"></script>
     <script src="scripts/lg-zoom.min.js"></script>
-
-    <script src="https://kit.fontawesome.com/6368e05507.js"></script>
-
-    <title>Document</title>
+    <title>Zion National Park</title>
   </head>
-  <body class="testback">
-    <nav>
-      <div class="navigation">
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="#" class="active">Zion National Park</a></li>
-          <li><a href="cecret.html">Cecret Lake</a></li>
-          <li><a href="lightgallery.html">lightgallery</a></li>
-          <li id="igithub">
-            <a href="https://github.com/kylejvh" target="_blank"
-              ><i class="fab fa-github-square"></i
-            ></a>
-          </li>
-          <li id="mobilemenu"><i class="fas fa-bars"></i></li>
-        </ul>
-      </div>
+
+  <body>
+    <nav class="hero__nav">
+      <a href="index.html">Home</a>
+      <a href="#" class="hero__nav--current">Zion National Park</a>
+      <a href="cecret.html">Cecret Lake</a>
+      <a href="misc.html">Misc Gallery</a>
+      <a href="https://github.com/kylejvh" target="_blank"
+        ><i class="fab fa-github-square"></i
+      ></a>
+
+      <!-- <li id="hero-navlink-mobile"><i class="fas fa-bars"></i></li> -->
     </nav>
+    <div class="hero-wrapper">
+      <div class="hero-contentwrapper">
+        <h1 class="hero-title">Zion</h1>
+        <h2>
+          Established 1919 Peak <br />
+          Elevation: 8726 ft
+        </h2>
+        <div class="hero-buttonwrapper">
+          <a href="#main-gallery" style="text-decoration: none;">
+            <p>Scroll Down</p>
+            <img src="./icons/downarrow.png" alt="Scroll down arrow"
+          /></a>
+        </div>
+      </div>
+    </div>
 
-    <div id="myModal" class="modal">
+    <!-- !! Test -->
+
+    <img
+      id="myImg"
+      src="./img/znppg/z1-1250.jpg"
+      alt="Snow"
+      style="width:100%;max-width:300px"
+    />
+
+    <!-- The Modal -->
+    <!-- <div id="myModal" class="modal">
+      <span class="close">&times;</span>
       <img class="modal-content" id="img01" />
-      <i class="fas fa-times modalclose" id="modalcloser"></i>
-      <!-- <span class="modalclose">&times;</span> -->
-    </div>
+      <div id="caption"></div>
+    </div> -->
+    <!--  -->
 
-    <div class="zionphotos" id="photogroup1">
-      <img
-        class="grid1"
-        srcset="
-          img/znppg/z1-1250.jpg 1250w,
-          img/znppg/z1-2000.jpg 2000w,
-          img/znppg/z1.jpg
-        "
-        sizes="(max-width: 800px) 1250px, (max-width: 2560px) 2000px"
-        alt="Zion"
-      />
-      <img
-        class="grid2"
-        srcset="
-          img/znppg/z2-1250.jpg 1250w,
-          img/znppg/z2-2000.jpg 2000w,
-          img/znppg/z2.jpg
-        "
-        sizes="(max-width:
-  800px) 1250px, (max-width: 2560px) 2000px"
-        alt="Zion"
-      />
-      <img
-        class="grid3"
-        srcset="
-          img/znppg/z3-1250.jpg 1250w,
-          img/znppg/z3-2000.jpg 2000w,
-          img/znppg/z3.jpg
-        "
-        sizes="(max-width:
-  800px) 1250px, (max-width: 2560px) 2000px"
-        alt="Zion"
-      />
-      <img
-        class="grid4"
-        srcset="
-          img/znppg/z4-1250.jpg 1250w,
-          img/znppg/z4-2000.jpg 2000w,
-          img/znppg/z4.jpg
-        "
-        sizes="(max-width:
-  800px) 1250px, (max-width: 2560px) 2000px"
-        alt="Zion"
-      />
-      <img
-        class="grid5"
-        srcset="
-          img/znppg/z5-1250.jpg 1250w,
-          img/znppg/z5-2000.jpg 2000w,
-          img/znppg/z5.jpg
-        "
-        sizes="(max-width:
-  800px) 1250px, (max-width: 2560px) 2000px"
-        alt="Zion"
-      />
-    </div>
+    <!-- !! COPY OF OLD GRID LAYOUT -->
 
-    <div class="zionphotos" id="photogroup2">
-      <img
-        class="gridalt1"
-        srcset="
-          img/znppg/z6-1250.jpg 1250w,
-          img/znppg/z6-2000.jpg 2000w,
-          img/znppg/z6.jpg
-        "
-        sizes="(max-width:
+    <main class="main-wrapper" id="main-gallery">
+      <div class="modal-wrapper">
+        <img class="modal-content" />
+        <i class="fas fa-times modalclose" id="modalcloser"></i>
+      </div>
+
+      <div class="zionphotos-wrapper" id="photogroup1">
+        <img
+          class="grid1"
+          srcset="
+            img/znppg/z1-1250.jpg 1250w,
+            img/znppg/z1-2000.jpg 2000w,
+            img/znppg/z1.jpg
+          "
+          sizes="(max-width: 800px) 1250px, (max-width: 2560px) 2000px"
+          alt="Zion"
+        />
+        <img
+          class="grid2"
+          srcset="
+            img/znppg/z2-1250.jpg 1250w,
+            img/znppg/z2-2000.jpg 2000w,
+            img/znppg/z2.jpg
+          "
+          sizes="(max-width:
   800px) 1250px, (max-width: 2560px) 2000px"
-        alt="Zion"
-      />
-      <img
-        class="gridalt2"
-        srcset="
-          img/znppg/z7-1250.jpg 1250w,
-          img/znppg/z7-2000.jpg 2000w,
-          img/znppg/z7.jpg
-        "
-        sizes="(max-width:
+          alt="Zion"
+        />
+        <img
+          class="grid3"
+          srcset="
+            img/znppg/z3-1250.jpg 1250w,
+            img/znppg/z3-2000.jpg 2000w,
+            img/znppg/z3.jpg
+          "
+          sizes="(max-width:
   800px) 1250px, (max-width: 2560px) 2000px"
-        alt="Zion"
-      />
-      <img
-        class="gridalt3"
-        srcset="
-          img/znppg/z8-1250.jpg 1250w,
-          img/znppg/z8-2000.jpg 2000w,
-          img/znppg/z8.jpg
-        "
-        sizes="(max-width:
+          alt="Zion"
+        />
+        <img
+          class="grid4"
+          srcset="
+            img/znppg/z4-1250.jpg 1250w,
+            img/znppg/z4-2000.jpg 2000w,
+            img/znppg/z4.jpg
+          "
+          sizes="(max-width:
   800px) 1250px, (max-width: 2560px) 2000px"
-        alt="Zion"
-      />
-      <img
-        class="gridalt4"
-        srcset="
-          img/znppg/z9-1250.jpg 1250w,
-          img/znppg/z9-2000.jpg 2000w,
-          img/znppg/z9.jpg
-        "
-        sizes="(max-width:
+          alt="Zion"
+        />
+        <img
+          class="grid5"
+          srcset="
+            img/znppg/z5-1250.jpg 1250w,
+            img/znppg/z5-2000.jpg 2000w,
+            img/znppg/z5.jpg
+          "
+          sizes="(max-width:
   800px) 1250px, (max-width: 2560px) 2000px"
-        alt="Zion"
-      />
-      <img
-        class="gridalt5"
-        srcset="
-          img/znppg/z10-1250.jpg 1250w,
-          img/znppg/z10-2000.jpg 2000w,
-          img/znppg/z10.jpg
-        "
-        sizes="(max-width:
+          alt="Zion"
+        />
+      </div>
+
+      <div class="zionphotos-wrapper" id="photogroup2">
+        <img
+          class="gridalt1"
+          srcset="
+            img/znppg/z6-1250.jpg 1250w,
+            img/znppg/z6-2000.jpg 2000w,
+            img/znppg/z6.jpg
+          "
+          sizes="(max-width:
   800px) 1250px, (max-width: 2560px) 2000px"
-        alt="Zion"
-      />
-    </div>
+          alt="Zion"
+        />
+        <img
+          class="gridalt2"
+          srcset="
+            img/znppg/z7-1250.jpg 1250w,
+            img/znppg/z7-2000.jpg 2000w,
+            img/znppg/z7.jpg
+          "
+          sizes="(max-width:
+  800px) 1250px, (max-width: 2560px) 2000px"
+          alt="Zion"
+        />
+        <img
+          class="gridalt3"
+          srcset="
+            img/znppg/z8-1250.jpg 1250w,
+            img/znppg/z8-2000.jpg 2000w,
+            img/znppg/z8.jpg
+          "
+          sizes="(max-width:
+  800px) 1250px, (max-width: 2560px) 2000px"
+          alt="Zion"
+        />
+        <img
+          class="gridalt4"
+          srcset="
+            img/znppg/z9-1250.jpg 1250w,
+            img/znppg/z9-2000.jpg 2000w,
+            img/znppg/z9.jpg
+          "
+          sizes="(max-width:
+  800px) 1250px, (max-width: 2560px) 2000px"
+          alt="Zion"
+        />
+        <img
+          class="gridalt5"
+          srcset="
+            img/znppg/z10-1250.jpg 1250w,
+            img/znppg/z10-2000.jpg 2000w,
+            img/znppg/z10.jpg
+          "
+          sizes="(max-width:
+  800px) 1250px, (max-width: 2560px) 2000px"
+          alt="Zion"
+        />
+      </div>
+    </main>
   </body>
 </html>
