Transition and layout tweaks.

--- a/zion.html
+++ b/zion.html
@@ -46,8 +46,8 @@
       <div class="hero-contentwrapper">
         <h1 class="hero-title">Zion</h1>
         <h2>
-          Established 1919 Peak <br />
-          Elevation: 8726 ft
+          Established 1919 <br />
+          Peak Elevation: 8726 ft
         </h2>
         <div class="hero-buttonwrapper">
           <a href="#main-gallery" style="text-decoration: none;">
