Organized and adjusted styles to be consistent throughout. Other cleanup/misc style tweaks

--- a/cecret.html
+++ b/cecret.html
@@ -32,15 +32,13 @@
   <body class="lakebody">
     <nav class="hero__nav">
       <a href="index.html">Home</a>
-      <a href="zion.html">Zion National Park</a>
+      <a href="zion.html">Zion</a>
       <a href="#" class="hero__nav--current">Cecret Lake</a>
       <a href="misc.html">Misc Gallery</a>
 
       <a href="https://github.com/kylejvh" target="_blank"
         ><i class="fab fa-github-square"></i
       ></a>
-
-      <li id="mobilemenu"><i class="fas fa-bars"></i></li>
     </nav>
 
     <div class="panels">
