--- a/misc.html
+++ b/misc.html
@@ -32,15 +32,13 @@
   <body>
     <nav class="hero__nav">
       <a href="index.html">Home</a>
-      <a href="zion.html" class="hero__nav--active">Zion National Park</a>
+      <a href="zion.html">Zion</a>
       <a href="cecret.html">Cecret Lake</a>
-      <a href="#">Misc Gallery</a>
+      <a href="#" class="hero__nav--current">Misc Gallery</a>
 
       <a href="https://github.com/kylejvh" target="_blank"
         ><i class="fab fa-github-square"></i
       ></a>
-
-      <li id="mobilemenu"><i class="fas fa-bars"></i></li>
     </nav>
 
     <!-- !! NEW GALLERY -->
