--- a/index.html
+++ b/index.html
@@ -41,15 +41,13 @@
     <div class="background">
       <nav class="hero__nav">
         <a href="#" class="hero__nav--current">Home</a>
-        <a href="zion.html">Zion National Park</a>
+        <a href="zion.html">Zion</a>
         <a href="cecret.html">Cecret Lake</a>
         <a href="misc.html">Misc Gallery</a>
 
         <a href="https://github.com/kylejvh" target="_blank"
           ><i class="fab fa-github-square"></i
         ></a>
-
-        <li id="mobilemenu"><i class="fas fa-bars"></i></li>
       </nav>
 
       <!-- <div class="background"> -->
