--- a/zion.html
+++ b/zion.html
@@ -31,17 +31,16 @@
   </head>
 
   <body>
-    <nav class="hero__nav">
+    <nav class="zion-nav">
       <a href="index.html">Home</a>
-      <a href="#" class="hero__nav--current">Zion National Park</a>
+      <a href="#" class="zion-nav-current">Zion</a>
       <a href="cecret.html">Cecret Lake</a>
       <a href="misc.html">Misc Gallery</a>
       <a href="https://github.com/kylejvh" target="_blank"
         ><i class="fab fa-github-square"></i
       ></a>
-
-      <!-- <li id="hero-navlink-mobile"><i class="fas fa-bars"></i></li> -->
     </nav>
+
     <div class="hero-wrapper">
       <div class="hero-contentwrapper">
         <h1 class="hero-title">Zion</h1>
@@ -50,7 +49,7 @@
           Peak Elevation: 8726 ft
         </h2>
         <div class="hero-buttonwrapper">
-          <a href="#main-gallery" style="text-decoration: none;">
+          <a href="#main-gallery">
             <p>Scroll Down</p>
             <img src="./icons/downarrow.png" alt="Scroll down arrow"
           /></a>
@@ -58,144 +57,131 @@
       </div>
     </div>
 
-    <!-- !! Test -->
-
-    <img
-      id="myImg"
-      src="./img/znppg/z1-1250.jpg"
-      alt="Snow"
-      style="width:100%;max-width:300px"
-    />
-
-    <!-- The Modal -->
-    <!-- <div id="myModal" class="modal">
-      <span class="close">&times;</span>
-      <img class="modal-content" id="img01" />
-      <div id="caption"></div>
-    </div> -->
-    <!--  -->
-
-    <!-- !! COPY OF OLD GRID LAYOUT -->
-
     <main class="main-wrapper" id="main-gallery">
-      <div class="modal-wrapper">
-        <img class="modal-content" />
+      <!-- <div class="modal-wrapper" id="myModal">
+        <img class="modal-content" id="img01" />
         <i class="fas fa-times modalclose" id="modalcloser"></i>
+      </div> -->
+      <div id="myModal" class="modal">
+        <span class="close">&times;</span>
+        <img class="modal-content" id="img01" />
       </div>
 
-      <div class="zionphotos-wrapper" id="photogroup1">
-        <img
-          class="grid1"
-          srcset="
-            img/znppg/z1-1250.jpg 1250w,
-            img/znppg/z1-2000.jpg 2000w,
-            img/znppg/z1.jpg
-          "
-          sizes="(max-width: 800px) 1250px, (max-width: 2560px) 2000px"
-          alt="Zion"
-        />
-        <img
-          class="grid2"
-          srcset="
-            img/znppg/z2-1250.jpg 1250w,
-            img/znppg/z2-2000.jpg 2000w,
-            img/znppg/z2.jpg
-          "
-          sizes="(max-width:
+      <div class="zionphotos-wrapper">
+        <div id="photogroup1">
+          <img
+            class="grid1"
+            srcset="
+              img/znppg/z1-1250.jpg 1250w,
+              img/znppg/z1-2000.jpg 2000w,
+              img/znppg/z1.jpg
+            "
+            sizes="(max-width: 800px) 1250px, (max-width: 2560px) 2000px"
+            alt="Zion"
+          />
+          <img
+            class="grid2"
+            srcset="
+              img/znppg/z2-1250.jpg 1250w,
+              img/znppg/z2-2000.jpg 2000w,
+              img/znppg/z2.jpg
+            "
+            sizes="(max-width:
   800px) 1250px, (max-width: 2560px) 2000px"
-          alt="Zion"
-        />
-        <img
-          class="grid3"
-          srcset="
-            img/znppg/z3-1250.jpg 1250w,
-            img/znppg/z3-2000.jpg 2000w,
-            img/znppg/z3.jpg
-          "
-          sizes="(max-width:
+            alt="Zion"
+          />
+          <img
+            class="grid3"
+            srcset="
+              img/znppg/z3-1250.jpg 1250w,
+              img/znppg/z3-2000.jpg 2000w,
+              img/znppg/z3.jpg
+            "
+            sizes="(max-width:
   800px) 1250px, (max-width: 2560px) 2000px"
-          alt="Zion"
-        />
-        <img
-          class="grid4"
-          srcset="
-            img/znppg/z4-1250.jpg 1250w,
-            img/znppg/z4-2000.jpg 2000w,
-            img/znppg/z4.jpg
-          "
-          sizes="(max-width:
+            alt="Zion"
+          />
+          <img
+            class="grid4"
+            srcset="
+              img/znppg/z4-1250.jpg 1250w,
+              img/znppg/z4-2000.jpg 2000w,
+              img/znppg/z4.jpg
+            "
+            sizes="(max-width:
   800px) 1250px, (max-width: 2560px) 2000px"
-          alt="Zion"
-        />
-        <img
-          class="grid5"
-          srcset="
-            img/znppg/z5-1250.jpg 1250w,
-            img/znppg/z5-2000.jpg 2000w,
-            img/znppg/z5.jpg
-          "
-          sizes="(max-width:
+            alt="Zion"
+          />
+          <img
+            class="grid5"
+            srcset="
+              img/znppg/z5-1250.jpg 1250w,
+              img/znppg/z5-2000.jpg 2000w,
+              img/znppg/z5.jpg
+            "
+            sizes="(max-width:
   800px) 1250px, (max-width: 2560px) 2000px"
-          alt="Zion"
-        />
-      </div>
+            alt="Zion"
+          />
+        </div>
 
-      <div class="zionphotos-wrapper" id="photogroup2">
-        <img
-          class="gridalt1"
-          srcset="
-            img/znppg/z6-1250.jpg 1250w,
-            img/znppg/z6-2000.jpg 2000w,
-            img/znppg/z6.jpg
-          "
-          sizes="(max-width:
+        <div id="photogroup2">
+          <img
+            class="gridalt1"
+            srcset="
+              img/znppg/z6-1250.jpg 1250w,
+              img/znppg/z6-2000.jpg 2000w,
+              img/znppg/z6.jpg
+            "
+            sizes="(max-width:
   800px) 1250px, (max-width: 2560px) 2000px"
-          alt="Zion"
-        />
-        <img
-          class="gridalt2"
-          srcset="
-            img/znppg/z7-1250.jpg 1250w,
-            img/znppg/z7-2000.jpg 2000w,
-            img/znppg/z7.jpg
-          "
-          sizes="(max-width:
+            alt="Zion"
+          />
+          <img
+            class="gridalt2"
+            srcset="
+              img/znppg/z7-1250.jpg 1250w,
+              img/znppg/z7-2000.jpg 2000w,
+              img/znppg/z7.jpg
+            "
+            sizes="(max-width:
   800px) 1250px, (max-width: 2560px) 2000px"
-          alt="Zion"
-        />
-        <img
-          class="gridalt3"
-          srcset="
-            img/znppg/z8-1250.jpg 1250w,
-            img/znppg/z8-2000.jpg 2000w,
-            img/znppg/z8.jpg
-          "
-          sizes="(max-width:
+            alt="Zion"
+          />
+          <img
+            class="gridalt3"
+            srcset="
+              img/znppg/z8-1250.jpg 1250w,
+              img/znppg/z8-2000.jpg 2000w,
+              img/znppg/z8.jpg
+            "
+            sizes="(max-width:
   800px) 1250px, (max-width: 2560px) 2000px"
-          alt="Zion"
-        />
-        <img
-          class="gridalt4"
-          srcset="
-            img/znppg/z9-1250.jpg 1250w,
-            img/znppg/z9-2000.jpg 2000w,
-            img/znppg/z9.jpg
-          "
-          sizes="(max-width:
+            alt="Zion"
+          />
+          <img
+            class="gridalt4"
+            srcset="
+              img/znppg/z9-1250.jpg 1250w,
+              img/znppg/z9-2000.jpg 2000w,
+              img/znppg/z9.jpg
+            "
+            sizes="(max-width:
   800px) 1250px, (max-width: 2560px) 2000px"
-          alt="Zion"
-        />
-        <img
-          class="gridalt5"
-          srcset="
-            img/znppg/z10-1250.jpg 1250w,
-            img/znppg/z10-2000.jpg 2000w,
-            img/znppg/z10.jpg
-          "
-          sizes="(max-width:
+            alt="Zion"
+          />
+          <img
+            class="gridalt5"
+            srcset="
+              img/znppg/z10-1250.jpg 1250w,
+              img/znppg/z10-2000.jpg 2000w,
+              img/znppg/z10.jpg
+            "
+            sizes="(max-width:
   800px) 1250px, (max-width: 2560px) 2000px"
-          alt="Zion"
-        />
+            alt="Zion"
+          />
+        </div>
       </div>
     </main>
   </body>
