Navbar, margin, and background color adjustmnets

--- a/cecret.html
+++ b/cecret.html
@@ -29,11 +29,11 @@
 
     <title>Cecret Lake</title>
   </head>
-  <body class="lakebody">
-    <nav class="hero__nav">
+  <body>
+    <nav class="lake-nav">
       <a href="index.html">Home</a>
       <a href="zion.html">Zion</a>
-      <a href="#" class="hero__nav--current">Cecret Lake</a>
+      <a href="#" class="lake-nav-current">Cecret Lake</a>
       <a href="misc.html">Misc Gallery</a>
 
       <a href="https://github.com/kylejvh" target="_blank"
