--- a/misc.html
+++ b/misc.html
@@ -30,11 +30,11 @@
     <title>Misc Gallery</title>
   </head>
   <body>
-    <nav class="hero__nav">
+    <nav class="misc-nav">
       <a href="index.html">Home</a>
       <a href="zion.html">Zion</a>
       <a href="cecret.html">Cecret Lake</a>
-      <a href="#" class="hero__nav--current">Misc Gallery</a>
+      <a href="#" class="misc-nav-current">Misc Gallery</a>
 
       <a href="https://github.com/kylejvh" target="_blank"
         ><i class="fab fa-github-square"></i
@@ -148,6 +148,15 @@
           </div>
         </div>
       </div>
+    </div>
+    <div class="misc-textwrapper">
+      <h1>
+        From our travels...
+      </h1>
+      <p>
+        On our trip, we visited many places in Utah and went on several hikes.
+        This is a collection of pictures from the places we visited.
+      </p>
     </div>
   </body>
 </html>
