Animation tweaks and styling adjustments/clean up.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
       defer
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"
     ></script>
-
     <script defer src="scripts/script.js"></script>
 
     <!-- lightgallery scripts/plugins  -->
@@ -37,29 +36,24 @@
   </head>
 
   <body>
-    <div class="background">
-      <nav class="hero__nav">
-        <a href="#" class="hero__nav--current">Home</a>
+    <div class="home-background-wrapper">
+      <nav class="home-nav">
+        <a href="#" class="home-nav-current">Home</a>
         <a href="zion.html">Zion</a>
         <a href="cecret.html">Cecret Lake</a>
         <a href="misc.html">Misc Gallery</a>
-
         <a href="https://github.com/kylejvh" target="_blank"
           ><i class="fab fa-github-square"></i
         ></a>
       </nav>
-
-      <!-- <div class="background"> -->
-      <div class="background__container">
-        <h1 class="background__title">
+      <div class="home-content-wrapper">
+        <h1>
           Utah Trip 2019
         </h1>
-
-        <p class="introtext">
+        <p>
           This is a site dedicated to my trip to Utah in August 2019!
         </p>
       </div>
-      <!-- </div> -->
     </div>
   </body>
 </html>
