--- a/zion.html
+++ b/zion.html
@@ -53,9 +53,9 @@
     </div>
 
     <main class="main-wrapper" id="main-gallery">
-      <div id="myModal" class="modal">
+      <div class="modal" id="zion-modal">
         <span class="close">&times;</span>
-        <img class="modal-content" id="img01" />
+        <img class="modal-content" id="modal-target-img" />
       </div>
 
       <div class="zionphotos-wrapper">
