Animation tweaks and styling adjustments/clean up.

--- a/cecret.html
+++ b/cecret.html
@@ -19,7 +19,7 @@
       type="text/javascript"
       src="scripts/vanilla-tilt.min.js"
     ></script>
-    <script defer src="scripts/script.js"></script>
+    <script defer src="scripts/cecret.js"></script>
 
     <!-- lightgallery scripts/plugins  -->
     <script src="scripts/lightgallery.min.js"></script>
